    {+} !lastlog command to show last log entries. (#160)
    {+} Support for CTCP Requests (might be useful for scripters)
    {+} Wildcard/Regex (Masks) support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
    {#} Fixed !routelock so it doesn't remove normal route when removing lock
    {#} precmd can be removed by omiting precommand via !setprecmd (#178)
    {#} Remove language tags before searching on TVmaze
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.
    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {^} Support for regex in IMDb Language rule
    {-} TheTVDB support as API goes offline on October 1st, 2017 (#175)
    {-} !sectionins command -> edit slftp.precatcher manually! (#157)

--=============================( SLFTP v1.5.5 )===================================-
  ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **

    {+} FastMM4 memory manager (https://github.com/pleriche/FastMM4)
    {+} Partial use of Faster Regex Engine FLRE (https://github.com/BeRo1985/flre) (much faster!!!)
    {+} New dirlist Code including:
        - Changed filesize variables to use Int64 instead of Integer
        - flag to enable/disable racing incomplete files (at least with glftpd for now) (see !skipinc) (#16)
        - Reworked the file sorting with more options
        - Reworked/optimized dirlist sorting
        - Added handling for special dirs completeness (i.e. dirfix)
    {+} !skipinc to enable/disable racing incomplete files (#16)